# audio_text_backend

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  ROADMAP.md  cloudflare-worker.js  config.ini  docker-compose.yml  future_changes.md  pyproject.toml  setup.py  supervisord.conf
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: bc149e2ef65f_add_whisper_model_field.py  c5614ae0da1b_0001_initial_revision.py
audio_text_backend/: config.py  db.py  debuger.py  errors.py  pubsub.py  utils.py
audio_text_backend/action/: audio.py  email.py  job.py  tasks.py  transcription.py
audio_text_backend/api/: api.py
audio_text_backend/api/routers/: audio.py  job.py  pubsub.py
audio_text_backend/celery/: app.py
audio_text_backend/cmd/: job.py  local_worker.py  worker.py
audio_text_backend/model/: __init__.py  base.py  transcription_job.py
audio_text_backend/schema/: __init__.py  audio.py  file.py  job.py
ci/: deployment.yaml
docs/: docker-layers-and-caching.md  dockerfile-architecture.md
pgsql/init.d/: add_db.sh
scripts/: alembic-revision.sh  deploy-cloud.sh  populate-env-variables.sh  setup-worker-iam.sh  start-api.sh  start-dev.sh  start_worker.sh
